[package]
name = "rov-host"
version = "2.0.0"
edition = "2021"

[dependencies]
gtk="0.17"
relm4 = "0.6"
relm4-components = "0.6.0"
relm4-icons = { version = "0.6.0", features = ["plus"] }
adw = { package = "libadwaita", version = "0.4" }

tracker = "0.2"
url = { version = "2", features = ["serde"] }
dirs = "5.0"
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derivative = "2.2"
