[package]
name = "rov-host"
version = "2.0.0"
edition = "2021"

[dependencies]
relm4 = {version = "0.6.0", features = ["all"]}
relm4-components = "0.6.0"
relm4-icons = { version = "0.6.0", features = ["plus"] }

tracker = "0.2"
url = { version = "2", features = ["serde"] }
dirs = "5.0"
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derivative = "2.2"

opencv = { version = "0.82", default-features = false, features = ["imgproc"] }
gst = { package = "gstreamer", version = "0.20" }
gst-app = { package = "gstreamer-app", version = "0.20", features = ["v1_22"] }